--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -22,6 +22,10 @@
     "lib": [
       "es2020",
       "dom"
+    ],
+    "typeRoots": [
+      "node_modules/@types",
+      "src/alertify.type.d.ts"
     ]
   },
   "angularCompilerOptions": {
